# backend-socifras

./: db.sqlite3  pyproject.toml  socifras.json  socifras_bkp.json
config/: settings.py  urls.py
socifras/: admin.py  apps.py  models.py  serializers.py  views.py
socifras/migrations/: 0001_initial.py  0002_musica_capa.py  0002_videoaulas.py  0003_artista.py  0003_rename_titulo_musica_nome_and_more.py  0004_musica.py  0004_rename_artistas_musica_artista_and_more.py
socifras/models/: __init__.py  artista.py  genero.py  musica.py  usuario.py  videoaulas.py
socifras/serializers/: __init__.py  artista.py  genero.py  musica.py  videoaulas.py
socifras/views/: __init__.py  artista.py  genero.py  musica.py  videoaulas.py
